add collabra office support

--- a/apps/nextcloud/web/nginx.conf
+++ b/apps/nextcloud/web/nginx.conf
@@ -149,6 +149,25 @@ http {
             # Optional: Don't log access to other assets
             access_log off;
         }
-    }
 
+        # collabora static files
+        location ^~ /loleaflet {
+            proxy_pass https://collabora:9980;
+            proxy_set_header Host $http_host;
+        }
+
+        # collabora WOPI discovery URL
+        location ^~ /hosting/discovery {
+            proxy_pass https://collabora:9980;
+            proxy_set_header Host $http_host;
+        }
+
+        # collabora websockets, download, presentation and image upload
+        location ^~ /lool {
+            proxy_pass https://collabora:9980;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $http_host;
+        }
+    }
 }
