--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -290,6 +290,100 @@ services:
 
 
 #-----------------------------------#
+# INVOICENINJA                      #
+#-----------------------------------#
+  invoiceninja-app:
+    image: invoiceninja/invoiceninja
+    container_name: invoiceninja-app
+    restart: unless-stopped
+    volumes:
+      - ./apps/invoiceninja/app/storage:/var/www/app/storage:rw
+      - ./apps/invoiceninja/app/logo:/var/www/app/public/logo:rw
+    environment:
+      - APP_DEBUG=0
+      - APP_URL=https://${INVOICENINJA_VIRTUAL_HOST}
+      - APP_KEY=${INVOICENINJA_APP_KEY}
+      - APP_CIPHER=AES-256-CBC
+      - DB_USERNAME=ninja
+      - DB_PASSWORD=${INVOICENINJA_MYSQL_PASSWORD}
+      - DB_HOST=invoiceninja-db
+      - DB_DATABASE=ninja
+      - MAIL_HOST=${INVOICENINJA_MAIL_HOST}
+      - MAIL_USERNAME=${INVOICENINJA_MAIL_USER}
+      - MAIL_PASSWORD=${INVOICENINJA_MAIL_PASSWORD}
+      - MAIL_DRIVER=smtp
+      - MAIL_FROM_NAME="${INVOICENINJA_MAIL_FROM_NAME}"
+      - MAIL_FROM_ADDRESS=${INVOICENINJA_MAIL_FROM_ADDRESS}
+    depends_on:
+      - invoiceninja-db
+    links:
+      - invoiceninja-db
+
+  invoiceninja-cron:
+    image: invoiceninja/invoiceninja
+    container_name: invoiceninja-cron
+    volumes:
+      - ./apps/invoiceninja/app/storage:/var/www/app/storage:rw
+      - ./apps/invoiceninja/app/logo:/var/www/app/public/logo:rw
+    environment:
+      - APP_DEBUG=0
+      - APP_URL=https://${INVOICENINJA_VIRTUAL_HOST}
+      - APP_KEY=${INVOICENINJA_APP_KEY}
+      - APP_CIPHER=AES-256-CBC
+      - DB_USERNAME=ninja
+      - DB_PASSWORD=${INVOICENINJA_MYSQL_PASSWORD}
+      - DB_HOST=invoiceninja-db
+      - DB_DATABASE=ninja
+      - MAIL_HOST=${INVOICENINJA_MAIL_HOST}
+      - MAIL_USERNAME=${INVOICENINJA_MAIL_USER}
+      - MAIL_PASSWORD=${INVOICENINJA_MAIL_PASSWORD}
+      - MAIL_DRIVER=smtp
+      - MAIL_FROM_NAME="${INVOICENINJA_MAIL_FROM_NAME}"
+      - MAIL_FROM_ADDRESS=${INVOICENINJA_MAIL_FROM_ADDRESS}
+    depends_on:
+      - invoiceninja-db
+    links:
+      - invoiceninja-db
+    entrypoint: |
+      bash -c 'bash -s <<EOF
+      trap "break;exit" SIGHUP SIGINT SIGTERM
+      sleep 300s
+      while /bin/true; do
+        ./artisan ninja:send-invoices
+        ./artisan ninja:send-reminders
+        sleep 1d
+      done
+      EOF'
+
+  invoiceninja-web:
+    image: nginx:1
+    container_name: invoiceninja-web
+    volumes:
+      - ./apps/invoiceninja/web/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./apps/invoiceninja/app/storage:/var/www/app/storage:rw
+      - ./apps/invoiceninja/app/logo:/var/www/app/public/logo:rw
+    environment:
+      - VIRTUAL_HOST=${INVOICENINJA_VIRTUAL_HOST}
+      - VIRTUAL_PORT=80
+    depends_on:
+      - invoiceninja-app
+    links:
+      - invoiceninja-app
+
+    invoiceninja-db:
+      image: mariadb
+      container_name: invoiceninja-db
+      restart: unless-stopped
+      volumes:
+        - invoiceninja-db:/var/lib/mysql
+      environment:
+        - MYSQL_ROOT_PASSWORD=${INVOICENINJA_MYSQL_ROOT_PASSWORD}
+        - MYSQL_DATABASE=ninja
+        - MYSQL_USER=ninja
+        - MYSQL_PASSWORD=${INVOICENINJA_MYSQL_PASSWORD}
+
+
+#-----------------------------------#
 # PYLOAD                            #
 #-----------------------------------#
   pyload:
@@ -321,6 +415,7 @@ volumes:
   hackmd-db:
   elasticsearch:
   gitea-db:
+  invoiceninja-db:
 
 networks:
   proxy-tier:
