--- a/apps/nextcloud/web/nginx.conf
+++ b/apps/nextcloud/web/nginx.conf
@@ -25,6 +25,11 @@ http {
 
     keepalive_timeout  65;
 
+    set_real_ip_from  10.0.0.0/8;
+    set_real_ip_from  172.16.0.0/12;
+    set_real_ip_from  192.168.0.0/16;
+    real_ip_header    X-Real-IP;
+
     #gzip  on;
 
     upstream php-handler {
@@ -50,6 +55,7 @@ http {
         add_header X-Robots-Tag none;
         add_header X-Download-Options noopen;
         add_header X-Permitted-Cross-Domain-Policies none;
+        add_header Referrer-Policy no-referrer;
 
         root /var/www/html;
 
@@ -89,7 +95,7 @@ http {
         #pagespeed off;
 
         location / {
-            rewrite ^ /index.php$uri;
+            rewrite ^ /index.php$request_uri;
         }
 
         location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
@@ -120,8 +126,8 @@ http {
 
         # Adding the cache control header for js and css files
         # Make sure it is BELOW the PHP block
-        location ~ \.(?:css|js|woff|svg|gif)$ {
-            try_files $uri /index.php$uri$is_args$args;
+        location ~ \.(?:css|js|woff2?|svg|gif)$ {
+            try_files $uri /index.php$request_uri;
             add_header Cache-Control "public, max-age=15778463";
             # Add headers to serve security related headers (It is intended to
             # have those duplicated to the ones above)
@@ -140,12 +146,14 @@ http {
             add_header X-Robots-Tag none;
             add_header X-Download-Options noopen;
             add_header X-Permitted-Cross-Domain-Policies none;
+            add_header Referrer-Policy no-referrer;
+
             # Optional: Don't log access to assets
             access_log off;
         }
 
         location ~ \.(?:png|html|ttf|ico|jpg|jpeg)$ {
-            try_files $uri /index.php$uri$is_args$args;
+            try_files $uri /index.php$request_uri;
             # Optional: Don't log access to other assets
             access_log off;
         }
