--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -173,6 +173,9 @@ services:
   redis:
     image: redis
     container_name: redis
+    networks:
+      - proxy-tier
+      - default
     restart: unless-stopped
 
   collabora:
